--- a/short_version/t/a.tex
+++ b/short_version/t/a.tex
@@ -4,9 +4,9 @@
             \includegraphics[width=\textwidth]{img/corpus/network1_dd}
         \end{minipage}
         \begin{minipage}{0.24\textwidth}
-            \includegraphics[width=\textwidth]{img/corpus/network4_dd}
+            \includegraphics[width=\textwidth]{img/corpus/network2_dd}
         \end{minipage}
-        \vskip\baselineskip
+        %\vskip\baselineskip
         \begin{minipage}{0.24\textwidth}
             \includegraphics[width=\textwidth]{img/corpus/blogs_dd}
         \end{minipage}
