--- a/short_version/t/b.tex
+++ b/short_version/t/b.tex
@@ -4,7 +4,7 @@
             \includegraphics[width=\textwidth]{img/corpus/network1_1}
         \end{minipage}
         \begin{minipage}{0.24\textwidth}
-            \includegraphics[width=\textwidth]{img/corpus/network4_1}
+            \includegraphics[width=\textwidth]{img/corpus/network2_1}
         \end{minipage}
         \vskip\baselineskip
         \begin{minipage}{0.24\textwidth}
@@ -13,6 +13,6 @@
         \begin{minipage}{0.24\textwidth}
             \includegraphics[width=\textwidth]{img/corpus/manufacturing_1}
         \end{minipage}
-        \caption {Local degree distributions for the artificial networks. Inner(left) and outer(right) degree are separated.} 
+        \caption {Local degree distributions for the four networks datasets. Inner(left) and outer(right) degree are separated. For Network1 and Network2 the classes come from ground-truth. For Blogs and Manufacturing we use classes find by a Louvain algorithms.} 
 	\label{fig:synt_graph_local}
 \end{figure}
