--- a/short_version/t/a.tex
+++ b/short_version/t/a.tex
@@ -13,6 +13,6 @@
         \begin{minipage}{0.24\textwidth}
             \includegraphics[width=\textwidth]{img/corpus/manufacturing_dd}
         \end{minipage}
-	\caption{Adjacency matrices (left) and global degree distributions (right) for the four networks datasets.}
+	\caption{Adjacency matrices (left) and global degree distributions (right) for the four training datasets.}
 	\label{fig:corpuses}
 \end{figure}
