--- a/short_version/experimentations.tex
+++ b/short_version/experimentations.tex
@@ -5,7 +5,7 @@ To illustrate our theoretical results, we evaluate the predictive performance an
 
 \subsection{Homophily Measures}
 
-For the homophily property, defined in section \ref{sec:homophily}, we represent using a box plot, for each model and each data set, the distributions of the similarity natural $s_n(i,j)$ and latent $s_l(i,j)$ computed respectively on linked and non-linked pairs of nodes for 10 networks generated with the model learned on the dataset.
+For the homophily property, defined in section \ref{sec:homophily}, we represent using boxplots, the distributions of the similarity natural $s_n(i,j)$ and latent $s_l(i,j)$ computed respectively on linked and non-linked pairs of nodes. Note that for all the models the values are aggregated on the datasets andd reported as final results.
 % The links or non-links are obtained by running the models in a generative mode. For each models we aggregated  the similarity of each couple of nodes as well as link prediction (links or non-links). The distributions of similarities are then represented on a boxplot that shows how the they are spread according to links and non-links.
 
 
@@ -17,18 +17,18 @@ The measures considered to evaluate the preferential attachment rely on a goodne
 If  $p$-value is large (close to 1), then the difference between the data and the model can be attributed to statistical fluctuations alone; if it is small, the model is not a plausible fit for the data and we can not conclude that there is an evidence for the preferential attachment in the network. 
 
 
-\paragraph{Local burstiness : }
 %In the context of latent models, while there is no ambiguity in computing the overall degree distribution, it is less obvious for the local case. We explain here the computation of the local degree distribution for each models according to section \ref{sec:burstiness} :
-The computation of the local degree distribution for each model defined according to section \ref{sec:burstiness} is detailed below: 
+Concerning the local preferential attachment, 
+the computation of the local degree distributions for each model is detailed below: 
 \begin{itemize}
     \item For each network learned with IMMSB, the tensor $Z$ indicates the membership of the nodes for each  interaction. In order to draw the local degree distribution for a factor $k$, we reduce the adjacency matrix in order to retain only the links that occur for the factor $k$. The local degree distribution is thus computed on the reduced adjacency matrix  $Y^k =\{ y_{ij}^k=1 \ \textrm{if}\ y_{ij}=1 , z_{i\rightarrow j}=k, z_{i\leftarrow j}=k; 0 \ \textrm{otherwise} \}$.
-        \item For ILFM, each node $i$ is associated with a features vector $\mat{f}_{i}$. The local degree distribution for the factor $k$ is obtained by taking into account only the contribution of this feature $k$ on the adjacency matrix. Thus, the local degree degree distribution is computed on the reduced adjacency matrix defined by $Y^k =\{ y_{ij}^k=1 \ \textrm{if}\ y_{ij}=1 , f_{ik}=1, f_{jk}=1; 0 \ \textrm{otherwise}\}$.
+        \item For ILFM, each node $i$ is associated with a feature vector $\mat{f}_{i}$. The local degree distribution for the factor $k$ is obtained by taking into account only the contribution of this feature $k$ on the adjacency matrix. Thus, the local degree degree distribution is computed on the reduced adjacency matrix defined by $Y^k =\{ y_{ij}^k=1 \ \textrm{if}\ y_{ij}=1 , f_{ik}=1, f_{jk}=1; 0 \ \textrm{otherwise}\}$.
 \end{itemize}
 
 
 \subsection{Prediction performance evaluation}
 The prediction problem is equivalent to a binary prediction problem which consists to decide for each pair of nodes if there is an edge or not between them. 
-Thus, the performance of the models can be evaluated with usual AUC-ROC measures and curves which allow to graphically compare the predictive performance of the models on each datasets.
+Thus, the performance of the models can be evaluated with usual AUC-ROC measures and curves which allow to graphically compare the predictive performance of the models on each dataset.
 
 \subsection{Training Datasets}
 
@@ -52,7 +52,7 @@ In our experiments, we consider two artificial networks and two real networks.  
 \end{table}
 
 The non-oriented artificial networks (Network1 and Network2) have been generated with DANCer-Generator \cite{largeron2015}. This generator has been chosen because it allows to build an attributed graph having a community structure  and  the known properties of real-world networks such as preferential attachment and homophily.
-Moreover, by modifying the parameters, these properties can be weakened. Finally, DANC-Generator is available under the terms of the GNU Public License and the parameters can be shared for experiments reproducibility. Furthermore, we share our experimental platform that we have used for our experiments which is available online. Notes that it makes our experiments easily fully reproducible \footnote{https://github.com/dtrckd/pymake}.
+Moreover, by modifying the parameters, these properties can be weakened. Finally, DANCer-Generator is available under the terms of the GNU Public License and the parameters can be shared for experiments reproducibility. Furthermore, we share our experimental platform that we have used for our experiments which is available online. Notes that it makes our experiments easily fully reproducible \footnote{https://github.com/dtrckd/pymake}.
 
 
 We evaluated also the models on two real world networks.
@@ -60,12 +60,15 @@ The first one, denoted Blogs \footnote{available at: http://moreno.ss.uci.edu/da
 The second one, denoted Manufacturing \footnote{available at: https://www.ii.pwr.edu.pl/~michalski/index.php?content=datasets\#manufacturing}, is an internal email communication network between employees of a mid-sized manufacturing company. Each vertex is associated  to an employee and an oriented link represents like previously a sent email. We can noticed that the second network is specific since it is a firm's network where the relationships between the employees are constrained. 
 
 
-The adjacency matrices and global degree distributions of these networks are presented in Figure \ref{fig:corpuses}. The adjacency matrices enable us to visualize some characteristic of the networks such as their density and their clustering patterns. In Figure \ref{fig:synt_graph_local}, we represents the local degree distribution for each networks. Each curve within those plots represents a local degree distribution associated to the different classes. The first section of Table \ref{table:me_gofit} (Empirical) reports the resulting $p$-value of the KS test as well as the value estimated for the parameter  $\alpha$ in the global case (right) and in the local case (left). As the ground truth is not available for the real networks (Blogs and Manufacturing), communities have been determined with Louvain algorithm \cite{Blondel2008} and, the local distribution defined according to the obtained communities. 
+The adjacency matrices and global degree distributions of these networks are presented in Figure \ref{fig:corpuses}. The adjacency matrices enable us to visualize some characteristics of the networks such as their density and their clustering patterns. In Figure \ref{fig:synt_graph_local}, we represent the local degree distributions for all networks. Each curve within those plots represents a local degree distribution associated to the different classes. As the ground truth is not available for the real networks (Blogs and Manufacturing), classes have been determined with Louvain algorithm \cite{Blondel2008} and, the local distribution defined according to the obtained classes. 
 
-These networks present  different affinity with the preferential attachment effect.
-Indeed, As shown in Figure \ref{fig:corpuses}, Network1 and Blogs verify the  global preferential attachment whereas it is not the case for Network2 and Manufacturing. The results of the KS test given in Table \ref{table:me_gofit} confirm this analysis since the $p$-value is equals to 1 for Network1 and Manufacturing whereas it is null for Network2 and Manufacturing.
+The networks present different affinity with the preferential attachment effect.  As shown in Figure \ref{fig:corpuses}, Network1 and Blogs verify the  global preferential attachment whereas it is not the case for Network2 and Manufacturing.
 
-The local degree distributions per classes, presented in Figure \ref{fig:synt_graph_local}, and the average results (and standard deviation) for the $p$-value computed over the communities is reported in Table \ref{table:me_gofit}. It leads to the same conclusion concerning the local preferential attachment which is well verified for Network1 and Blogs with a $p$-value equals to 1 but in a lesser extend for Network2 and Manufacturing with respectively a $p$-value equals to 0 and 0.4. Thus, for the preferential attachment, global and local, we can distinguish Network1 and Blogs which satisfy the preferential attachment and Network2 and Manufacturing which do not exhibit the property
+The first section of Table \ref{table:me_gofit} (Training Datasets) reports the resulting $p$-values of the KS test as well as the values estimated for the parameters $\alpha$ in the global case (right) and in the local case (left).
+
+The results confirm the previous analysis since the $p$-value is equal to 1 for Network1 and Manufacturing whereas it is null for Network2 and Manufacturing.
+
+The local degree distributions per class, presented in Figure \ref{fig:synt_graph_local}, and the average results (with standard deviation) computed over the classes, for the $p$-value, are reported in Table \ref{table:me_gofit}. They lead to the same conclusion concerning the local preferential attachment which is well verified for Network1 and Blogs with a $p$-value equals to 1 but in a lesser extend for Network2 and Manufacturing with respectively a $p$-value equals to 0 and 0.4. Thus, for the preferential attachment, global and local, we can distinguish Network1 and Blogs which satisfy the preferential attachment and Network2 and Manufacturing which do not exhibit the property.
 
 \input{\lpath/t/a.tex}
 \input{\lpath/t/b.tex}
@@ -73,11 +76,11 @@ The local degree distributions per classes, presented in Figure \ref{fig:synt_gr
 
 
 \subsection{Model Evaluation}
-For each dataset described earlier, we run a MCMC inference consisting of 200 iterations to learn the posterior distribution for the IMMSB and ILFM  models described in section \ref{sec:intro}. For IMMSB, the concentration parameters of HDP were optimized according to \cite{HDP} using vague gamma priors $\alpha_0 \sim \text{Gamma}(1,1)$ and $\gamma \sim \text{Gamma}(1,1)$. The parameters for the matrix weights were fixed to $\lambda_0=\lambda_1=0.1$. For ILFM, the IBP hyper-parameter was fixed to $\alpha=0.5$ and the weights hyper-parameter to $\sigma_w = 1$. 
+For each dataset described earlier, we run a MCMC inference consisting of 200 iterations to learn the posterior distribution for the IMMSB and ILFM  models described previously. For IMMSB, the concentration parameters of HDP were optimized  using vague gamma priors $\alpha_0 \sim \text{Gamma}(1,1)$ and $\gamma \sim \text{Gamma}(1,1)$ following \cite{HDP}. The parameters for the matrix weights  $\lambda_0$ and $\lambda_1$ were fixed to 0.1. For ILFM, the weights hyperparameter  $\sigma_w$ was fixed to 1 and the IBP hyperparameter $\alpha$ to 0.5 in order to  have comparable number of classes with IMMSB.
 
 The inference procedure was run with these settings for ten runs, and the following experiments are averaged on them.
 
-for the four networks datasets previously described and we present hereafter the averaged results (and standard deviations) computed on ten networks generated with the model fitted for each dataset.
+This inference procedure was run ten times and the average values are reported as final results.
 
 Table \ref{table:me_gofit} reports the value of the power-law goodness of fit for IMMSB and ILFM in the global case (left) and in the local case (right). To compute those statistics we use the model in generative mode over all the nodes. Thus we obtain a fully generated networks from the models parameters $\hat F$ and $\hat \Phi$. Note that the $p$-values statistic for the \emph{local} settings are averaged over all classes.
 
@@ -87,10 +90,10 @@ The figure \ref{fig:me_local} illustrates the local preferential attachment by p
  
 
 \begin{table}[t]
-    \caption{Power law goodness of fit results for the preferential attachment for empirical data and fitted models.}
+    \caption{Power law goodness of fit results for the preferential attachment for training datasets and networks generated by fitted models.}
 \centering
   \begin{tabular}{lrrrr}
-      \multirow{2}{*}{\textbf{Empirical}}  &
+      \multirow{2}{*}{\textbf{Training Datasets}}  &
       \multicolumn{2}{c}{Global} & \multicolumn{2}{c}{Local}\\
       \cmidrule(r){2-3} \cmidrule(l){4-5}
       &   $p$-value &   $\alpha$   & $p$-value & $\alpha$   \\
@@ -138,7 +141,7 @@ The figure \ref{fig:me_local} illustrates the local preferential attachment by p
 	\label{fig:me_local}
 \end{figure}
 
-Figure \ref{fig:homo_mustach} presents box plots describing the distributions of the similarity natural $s_n(i,j)$ and latent $s_l(i,j)$ computed respectively on linked and non-linked pairs of nodes and averaged over 10 networks generation with IMMSB (left) and ILFM (right). The results have been aggregated over the four datasets.  It confirms that the natural similarity is  higher for  pairs of nodes which are connected than between nodes which are not linked for both models. However, we can noticed that for IMMSB, the similarities computed on the non linked pairs are more concentrated around zero which provides an interesting insight of the bursty behavior of this model. For the latent similarity,  there is no difference between the linked and not linked pairs, and consequently, we can not say that similar nodes are more likely to be connected. These experimental results are in accordance with our theoretical results presented in Section \ref{sec:homophily} which state that both ILFM and IMMSB are homophilic with respect to the natural similarity $s_n(i,j)$ and are not homophilic for the latent similarity $s_l(i,j)$ .
+Figure \ref{fig:homo_mustach} presents boxplots describing the distributions of the similarity natural $s_n(i,j)$ and latent $s_l(i,j)$ computed respectively on linked and non-linked pairs of nodes and averaged over 10 networks generation with IMMSB (left) and ILFM (right). The results have been aggregated over the four datasets.  It confirms that the natural similarity is  higher for  pairs of nodes which are connected than between nodes which are not linked for both models. However, we can noticed that for IMMSB, the similarities computed on the non linked pairs are more concentrated around zero which provides an interesting insight of the bursty behavior of this model. For the latent similarity,  there is no difference between the linked and not linked pairs, and consequently, we can not say that similar nodes are more likely to be connected. These experimental results are in accordance with our theoretical results presented in Section \ref{sec:homophily} which state that both ILFM and IMMSB are homophilic with respect to the natural similarity $s_n(i,j)$ and are not homophilic for the latent similarity $s_l(i,j)$ .
 \begin{figure}[h]
     \centering
         \begin{minipage}{0.24\textwidth}
@@ -170,7 +173,7 @@ This figure shows that for bursty networks, the predictive performance of IMMSB 
         \begin{minipage}{0.24\textwidth}
             \includegraphics[width=\textwidth]{img/corpus/homo_mustach_ilfm}
         \end{minipage}
-        \caption{Box plot for IMMSB (left) and ILFM (left) of the distributions for natural and latent similarities on the overall datasets separated for links, and non-links observations. }
+        \caption{Boxplot for IMMSB (left) and ILFM (left) of the distributions for natural and latent similarities on the overall datasets separated for links, and non-links observations. }
         \label{fig:homo_mustach}
 \end{figure}
 
